# crawlers

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
core/: __main__.py  my_args.py
core/classes/: classes.py
core/scripts/: my_args.py
core/scripts/google/: cookies.json  sign_in.py
lastfmcrawler/: CHANGELOG.md  README.md  __main__.py  pyproject.toml
spotifycrawler/: README.md  __main__.py  pyproject.toml
spotifycrawler/scripts/: routines.py  scripts.py
youtubetakedown/: CHANGELOG.md  __main__.py  pyproject.toml
