[tool.poetry]
name = "youtubetakedown"
version = "0.1.0"
description = "get video ids from sheet and then use selenium to issue takedown requests"
authors = ["Rivers Cuomo <riverscuomo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
undetected-chromedriver = "^3.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
